# ffmpeg_android

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/ffmpeg/lingxiao/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ffmpeg/lingxiao/ffmpegdemo/: MainActivity.java  VideoAdapter.java  VideoListActivity.java  VideoModel.java
app/src/main/res/layout/: activity_main.xml  activity_video_list.xml  video_item.xml
app/src/test/java/com/ffmpeg/lingxiao/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
playerlibrary/: CMakeLists.txt  build.gradle
playerlibrary/src/androidTest/java/com/ffmpeg/lingxiao/playerlibrary/: ExampleInstrumentedTest.java
playerlibrary/src/main/: AndroidManifest.xml
playerlibrary/src/main/cpp/: native-lib.cpp
playerlibrary/src/main/java/com/ffmpeg/lingxiao/playerlibrary/: PlayerSdk.java
playerlibrary/src/test/java/com/ffmpeg/lingxiao/playerlibrary/: ExampleUnitTest.java
